// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/Markdown Markdown with props 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <div
    class="lck-color-content"
  >
    
  This is the content.

  </div>
</div>
`;

exports[`storyshots components/visualize/Markdown Markdown without props 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <!---->
</div>
`;
